tests/opaque_types_and_component_syntax_destructors/opaque_types_and_component_syntax_destructors.exp
Error ------------------------------------------------------------------------------------------------- non-local.js:7:3

Cannot cast `context` to number because `Tag` [1] is incompatible with number [2]. [incompatible-cast]

   non-local.js:7:3
   7|   context as number; // ERROR
        ^^^^^^^

References:
   opaque.js:5:37
   5| export const Context: React$Context<Tag> = createContext<Tag>(3);
                                          ^^^ [1]
   non-local.js:7:14
   7|   context as number; // ERROR
                   ^^^^^^ [2]



Found 1 error
